# gdtx

./: .editorconfig  .gitignore  Justfile  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/gdtoolkit/: Cargo.toml
crates/gdtoolkit-gdscript-formatter/: Cargo.toml
crates/gdtoolkit-gdscript-formatter/src/: lib.rs  writer.rs
crates/gdtoolkit-gdscript-lexer/: Cargo.toml
crates/gdtoolkit-gdscript-lexer/src/: debug.rs  error.rs  lexer.rs  lib.rs  read.rs  readers.rs  serializer.rs  span.rs  token.rs
crates/gdtoolkit-gdscript-lexer/src/tests/: mod.rs
crates/gdtoolkit-gdscript-lexer/src/tests/samples/: sample01.gd
crates/gdtoolkit-gdscript-lexer/src/token/: float.rs  mod.rs  newline.rs  string.rs  value.rs
crates/gdtoolkit-gdscript-parser/: Cargo.toml
crates/gdtoolkit-gdscript-parser/src/: lib.rs  parser.rs  serializer.rs
crates/gdtoolkit-gdscript-types/: Cargo.toml
crates/gdtoolkit-gdscript-types/src/: lib.rs
crates/gdtoolkit-parser/: Cargo.toml
crates/gdtoolkit-tests/: Cargo.toml
crates/gdtoolkit-tests/src/: lib.rs
crates/gdtoolkit-types/: Cargo.toml
crates/gdtoolkit/src/: args.rs  lib.rs  main.rs
crates/gdtoolkit/src/commands/: debug.rs  fmt.rs  mod.rs
crates/gdtx/: Cargo.toml
crates/gdtx-gdscript-formatter/: Cargo.toml
crates/gdtx-gdscript-formatter/src/: writer.rs
crates/gdtx-gdscript-lexer/: Cargo.toml
crates/gdtx-gdscript-lexer/src/: debug.rs  error.rs  read_context.rs  serializer.rs
crates/gdtx-gdscript-lexer/src/tests/samples/: sample_log.gd
crates/gdtx-gdscript-lexer/src/token/: common.rs  indentation.rs  keyword.rs  mod.rs  operator.rs  punct.rs
crates/gdtx-gdscript-parser/: Cargo.toml
crates/gdtx-gdscript-parser/src/: parser.rs  serializer.rs
crates/gdtx-tests/: Cargo.toml
crates/gdtx-tests/src/: lib.rs
crates/gdtx/src/: args.rs  lib.rs  main.rs
crates/gdtx/src/commands/: debug.rs  fmt.rs  mod.rs
crates/gdtx/src/utils/: diff.rs
docs/: README.md  cli.md
