[package]
name = "gdtoolkit-gdscript-formatter"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
gdtoolkit-gdscript-lexer = { path = "../gdtoolkit-gdscript-lexer" }
tracing = "0.1.37"

[dev-dependencies]
indoc = "2.0.0"
tracing-subscriber = "0.3.16"
