[package]
name = "gdtoolkit-gdscript-parser"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdtoolkit-gdscript-types = { path = "../gdtoolkit-gdscript-types" }