[package]
name = "gdtoolkit"
version = "0.1.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
gdtoolkit-gdscript-formatter = { path = "../gdtoolkit-gdscript-formatter" }
gdtoolkit-gdscript-lexer = { path = "../gdtoolkit-gdscript-lexer" }
gdtoolkit-gdscript-parser = { path = "../gdtoolkit-gdscript-parser" }
owo-colors = "3.5.0"
walkdir = "2.3.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
similar = { version = "2.2.1", features = ["inline"] }
tracing-tree = "0.2.2"
