[package]
name = "gdtx-gdscript-lexer"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.3.0"
tracing-subscriber = "0.3.16"
